--- a/src/style/vars.css
+++ b/src/style/vars.css
@@ -7,5 +7,6 @@
     --app-previews-panel-scrollbar-size: 15px;
     --app-previews-panel-side-padding: 0.5rem;
     --app-bar-icon-margin: 0.2rem;
+    --start-bar-scroller-height: 8px;
     
 }
